kubernetes/operators/medik8s/self-node-remediation/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-node-remediation-controller-manager
  namespace: medik8s-system
  labels:
    control-plane: controller-manager
    self-node-remediation-operator: ""
spec:
  replicas: 2
  selector:
    matchLabels:
      control-plane: controller-manager
      self-node-remediation-operator: ""
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        control-plane: controller-manager
        self-node-remediation-operator: ""
    spec:
      containers:
        - args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
            - --is-manager
          command:
            - /manager
          image: quay.io/medik8s/self-node-remediation-operator:v0.13.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 20m
              memory: 110Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 65532
            runAsGroup: 65532
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
        - args:
            - --secure-listen-address=0.0.0.0:8443
            - --http2-disable
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=0
          image: quay.io/brancz/kube-rbac-proxy:v0.23.0
          name: kube-rbac-proxy
          ports:
            - containerPort: 8443
              name: https
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
      serviceAccountName: self-node-remediation-controller-manager
      terminationGracePeriodSeconds: 10
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              control-plane: controller-manager
              self-node-remediation-operator: ""
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: self-node-remediation-webhook-server-cert
